loading character function small css fix

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -96,7 +96,7 @@
 	mask-image: url("/dialog-transition-mask.png");
 	/* -webkit-mask-position: 0% 20%;
 	mask-position: 0% 20%; */
-	-webkit-mask-size: 100 3100%;
+	-webkit-mask-size: 100% 3100%;
 	mask-size: 100% 3100%;
     -webkit-animation: mask-play 0.5s steps(30) forwards;
     animation: mask-play 0.5s steps(30) forwards;
@@ -151,6 +151,8 @@
 .cliped{
     -webkit-animation: mask-reverse 0.5s steps(30) forwards;
 	animation: mask-reverse 0.5s steps(30) forwards;
+	user-select: none;
+	pointer-events: none;
     /* -webkit-mask-position: 0% 0%;
     mask-position: 0% 0%; */
     /* opacity: 0;
